--- a/NaturalEnvironment/Pages/Environments/Index.cshtml
+++ b/NaturalEnvironment/Pages/Environments/Index.cshtml
@@ -1,5 +1,5 @@
 @page
-@model NaturalEnvironment.Pages_Environments.IndexModel
+@model RazorPagesNaturalEnvironment.Pages.Environments.IndexModel
 
 @{
     ViewData["Title"] = "Index";
